--- a/index.html
+++ b/index.html
@@ -7,25 +7,28 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
-    <title>GOVOR</title>
+    <link rel = "icon" href ="img/icon.jpg" type = "image/x-icon">
+    <title>Говор Андрей Фильмография</title>
 </head>
 <body data-bs-spy="scroll" data-bs-target="#years" data-bs-offset="0" tabindex="0">
-<div class="row">
+<div class=" mainRow">
     <div class="leftBlock col-xl-3">
         <div class="leftBlock__position">
             <div class="info">
                 <img src="img/photo.jpg" alt="" class="info__img">
-                <div class="info__name">Говор Андрей</div>
-                <div class="info__post">Звукорежиссёр на съемочной площадке</div>
-                <div class="info__contacts contacts">
-                    <a href="tel:+375293765285" target="_blank"  class="contacts__link"><i class="fas fa-mobile-alt"></i>+375(29)376-52-85</a>
-                    <a href="mailto:3765285@gmail.com" target="_blank"  class="contacts__link"><i class="far fa-envelope-open"></i>3765285@gmail.com</a>
-                    <a href="https://t.me/andrey_govor" target="_blank"  class="contacts__link"><i class="far fa-paper-plane"></i>Telegram</a>
+                <div class="info__flex">
+                    <div class="info__name">Говор Андрей</div>
+                    <div class="info__post">Звукорежиссёр на съемочной площадке</div>
+                    <div class="info__contacts contacts">
+                        <a href="tel:+375293765285" target="_blank"  class="contacts__link"><i class="fas fa-mobile-alt"></i>+375(29)376-52-85</a>
+                        <a href="mailto:3765285@gmail.com" target="_blank"  class="contacts__link"><i class="far fa-envelope-open"></i>3765285@gmail.com</a>
+                        <a href="https://t.me/andrey_govor" target="_blank"  class="contacts__link"><i class="far fa-paper-plane"></i>Telegram</a>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-    <div class="mainBlock col" >
+    <div class="mainBlock col-xl" >
         <h1 class="title">Фильмография</h1>
         <div class="filmography">
             <div class="filmography__year year" id="year-2020">
